# nvim-tcss

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_tcss/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
ftdetect/: tcss.lua
indent/: tcss.vim
lua/: tcss.lua
lua/tcss/: init.lua
plugin/: tcss.vim
queries/tcss/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c
syntax/: tcss.vim
