[package]
name = "tree-sitter-tcss"
description = "Nvim plugin to support Textual CSS syntax highlighting."
version = "0.1.0"
authors = ["Akrm Al-Hakimi <alhakimiakrmj@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "tcss"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/cachebag/tcss-nvim-plugin"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.5"
